force-app/main/default/objects/ProjectResource__c/ProjectResource__c.object-meta.xml
<CustomObject>
    <label>ProjectResource</label>
    <nameField>
        <displayFormat>PR- {0000}</displayFormat>
        <label>ProjectResource Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ProjectResources</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>