force-app/main/default/objects/ProjectResource__c/fields/AmountToPay__c.field-meta.xml
<CustomField>
    <fullName>AmountToPay__c</fullName>
    <label>AmountToPay</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>