force-app/main/default/objects/ProjectResource__c/fields/RegisterHours__c.field-meta.xml
<CustomField>
    <fullName>RegisterHours__c</fullName>
    <label>RegisterHours</label>
    <summarizedField>TaskProject__c.RegisterHours__c</summarizedField>
    <summaryForeignKey>TaskProject__c.ProjectResource__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>